poc/examples/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: lab1
---
kind: Namespace
apiVersion: v1
metadata:
  name: lab2
